# sentinel-treasury

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  DEPLOY.md  README.md  TODO.md  design.md  eslint.config.mjs  package.json  pnpm-lock.yaml  railway.json  resources.md  spec.md  tsconfig.base.json  tsconfig.json
apps/dashboard/: .env.local.example  next.config.mjs  package.json  tsconfig.json  vercel.json
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/api/cycles/: route.ts
apps/dashboard/app/api/cycles/stream/: route.ts
apps/dashboard/app/api/position/: route.ts
apps/dashboard/app/api/receipts/: route.ts
apps/dashboard/app/api/rpc/: route.ts
apps/dashboard/app/api/status/: route.ts
apps/dashboard/app/api/vault/: route.ts
apps/dashboard/components/: DepositWithdraw.tsx  TopBar.tsx  atoms.tsx
apps/dashboard/components/panels/: Action.tsx  Allocation.tsx  Debate.tsx  Decision.tsx  Guardrail.tsx  Position.tsx  ReceiptFeed.tsx  X402Meter.tsx
apps/dashboard/lib/: chain.ts  depositor.ts  format.ts  liveCycle.ts  scenario.ts  types.ts  useLoop.ts  verify.ts  wallet.tsx
apps/dashboard/lib/casper/: reads.ts  tx.ts
apps/dashboard/lib/server/: ledgerReader.ts  runnerProxy.ts  vaultReads.ts
docs/: abi-spike.md  cspr-trade-mcp.md  decisions.md  deploy-runbook.md  phase-0-runbook.md
tools/cspr-trade-mcp/: package-lock.json  package.json  patch-casper-esm.mjs  swap-run.mjs
tools/key-hardening/: Cargo.toml
tools/key-hardening/src/: main.rs
